Update spotless config and code structure around service layer

--- a/src/main/webapp/WEB-INF/extensions/menu.xhtml
+++ b/src/main/webapp/WEB-INF/extensions/menu.xhtml
@@ -88,7 +88,7 @@
                                             <p:commandButton id="btnSearch" ajax="false"
                                                              title="#{msg['btn.search.tooltip']}"
                                                              alt="#{msg['btn.search.tooltip']}"
-                                                             value="#{msg['btn.search']}" action="#{earthquakeBean.consultarSismos}"/>
+                                                             value="#{msg['btn.search']}" action="#{earthquakeBean.searchEarthquakes}"/>
                                         </td>
                                     </tr>
                                 </table>
